# context-confidence-rating

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  demo.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
ccr/: __init__.py  analyzer.py  cli.py  context_generator.py
examples/: usage_examples.py
tests/: test_analyzer.py
